<resources>
    <string name="app_name">SlagalicaKviz</string>
    <string name="slagalica">SLAGALICA</string>
    <string name="igra">Zapocni igru</string>
    <string name="rang_lista">Ранг листа</string>
    <string name="prikaz">Prikaz korisnika</string>
    <string name="chat">ЋАСКАЊЕ</string>
    <string name="moj_broj">МОЈ БРОЈ</string>
    <string name="spojnice">СПОЈНИЦЕ</string>
    <string name="sko_ko">СКОЧКО</string>
    <string name="ko_zna_zna">КО ЗНА ЗНА</string>
    <string name="asocijacije">АСОЦИЈАЦИЈЕ</string>
    <string name="igre">ИГРЕ</string>
    <string name="questionMark">\?</string>
    <string name="xMark">X</string>
    <string name="okMark">ОК</string>
    <string name="cMark">С</string>
    <string name="plusSign">+</string>
    <string name="resultMojBroj">Резултат: </string>
    <string name="minusSign">-</string>
    <string name="multiplySign">*</string>
    <string name="divideSign">/</string>
    <string name="parenthesisLeft">(</string>
    <string name="parenthesisRight">)</string>
    <string name="nextQuestion">NE ZNAM</string>
    <string name="games">Игре</string>
    <string name="sumPoints">Поени: </string>
    <string name="mainPlayer">ВИ</string>
    <string name="Opponent">Противник</string>
    <string name="typeofplayer">"TypeOfPlayer"</string>
    <string name="mainPlyerPoints">MainPlayerPoints</string>
    <string name="opponentPoints">OpponentPoints</string>
    <string name="Points">Points</string>
    <string name="buttonPrefix">button_</string>
    <string name="gamePrefix">Game_</string>
    <string name="editTextPrefix">editText_</string>
    <string name="exitFromSingleGame">Да ли сте сигурни?</string>
    <string name="yes">Да</string>
    <string name="no">Не</string>
    <string name="gameOverMessage">Освојили сте &#160;</string>
    <string name="points1">&#160; поена.</string>
    <string name="ourSolution">&#160; Наше решење: &#160;</string>
    <string name="transparentColor">#00000000</string>
    <string name="redColor">#FF0000</string>
    <string name="columnA">А</string>
    <string name="columnB">B</string>
    <string name="columnC">C</string>
    <string name="columnD">D</string>
    <string name="finalSolution">KONACNO RESENJE</string>
    <string name="message">Порука</string>
    <string name="greenColor">#00FF00</string>
    <string name="grayColor">"#FFE57C"</string>
    <string name="question">Питање &#160;</string>
    <string name="correctAnswer">Тачно.</string>
    <string name="wrongAnswer">Нетачно.</string>
    <string name="settingsParameters">Параметри за онлајн игру</string>
    <string name="finalSolutionGame6">Коначно решење:&#160;</string>
    <string name="colorBackground">Боја позадине</string>
    <string name="color1">#03A9F4</string>
    <string name="color2">#CDDC39</string>
    <string name="color3">#6200EE</string>
    <string name="color4">#FFAAAA</string>
    <string name="color5">#BB00BB</string>
    <string name="color6">#AAA2C3</string>
    <string name="color7">#1111FF</string>
    <string name="color8">#11FF11</string>
    <string name="color9">#789AAA</string>
    <string name="color10">#444444</string>
    <string name="color11">#CB0000</string>
    <string name="color12">#ABCABC</string>
    <string name="color13">#990f02</string>
    <string name="color14">#32CD32</string>
    <string name="backgroundColorKey">backgroundColor</string>
    <string name="zero">0</string>
    <string name="usernameKey">username</string>
    <string name="nameKey">name</string>
    <string name="lastnameKey">lastname</string>
    <string name="connectionProblem">Дошло је до грешке, проблем са конекцијом</string>
    <string name="parameterError">"Проверите све параметре"</string>
    <string name="playerNode">Player</string>
    <string name="usernameError">Неисправно корисничко име</string>
    <string name="usernameMissing">Недостаје корисничко име. Додајте одмах?</string>
    <string name="playersOnlineNode">PlayersOnline</string>
    <string name="playerFirebase">player</string>
    <string name="name">Име:&#160;</string>
    <string name="lastname">Презиме:&#160;</string>
    <string name="username">Корисничко име:&#160;</string>
    <string name="name_">Име</string>
    <string name="lastname_">Презиме</string>
    <string name="username_">Корисничко име</string>
    <string name="search">Претражи…</string>
    <string name="challenge">Изазови</string>
    <string name="challenged">Изазов од:&#160;</string>
    <string name="pointsFirebase">points</string>
    <string name="gameInHistory">Пронађена игра од раније</string>
    <string name="newGame">Нова игра?</string>
    <string name="endGame">Крај игре</string>
    <string name="refusedGame">Игра је отказана</string>
    <string name="userRefusedGame">Корисник је одбио изазов.</string>
    <string name="continueGame">"Настави?"</string>
    <string name="cancel">Откажи</string>
    <string name="challengedSomeone">challengedSomeone</string>
    <string name="gameFirebase">Game</string>
    <string name="challengerFirebase">challenger</string>
    <string name="challengedFirebase">challenged</string>
    <string name="player1Firebase">player1</string>
    <string name="player2Firebase">player2</string>
    <string name="playerAlreadyChallenged">Обавештење</string>
    <string name="playerChallengedMessage">Већ сте изазвали играча. Сачекајте који тренутак да одговори на Ваш захтев или покрените поново овај мени и покушајте поново.</string>
    <string name="waitingForPlayer">Чекамо одговор од играча</string>
    <string name="onlinePlayersActivity">Играчи на мрежи</string>
    <string name="success">Успешна регистрација</string>
    <string name="buttonClickCheck">Проверите прво исправност података кликом на упитник</string>
    <string name="messagesFirebase">messages</string>
    <string name="exitGame">Излаз из игре?</string>


    <string name="labelPassword">Password</string>
    <string name="labelUsername">Username</string>
    <string name="labelEmail">Email</string>
    <string name="btnLogIn">Log in</string>
    <string name="btnReg">Sign up</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="myAccount">Account</string>
    <string name="registration">Sing up</string>
    <string name="newPassword">New password</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="text">Text</string>
    <string name="Skocko">Skocko</string>
    <string name="mojBroj">Moj broj</string>
</resources>