<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/map_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/loginClickRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/login"
                android:layout_gravity="right"/>
        </Toolbar>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailInputRegister"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="15dp"
                android:hint="@string/labelEmail" />

            <EditText
                android:id="@+id/usernameInputRegister"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="15dp"
                android:hint="@string/labelUsername" />

            <EditText
                android:id="@+id/passwordInputRegister"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="15dp"
                android:hint="@string/labelPassword"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/signUpClickRegister"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btnReg" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>