<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/map_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/homeClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

        </Toolbar>

    </LinearLayout>

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="@android:color/background_light"
        android:textSize="26sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:hint="@string/labelUsername" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:hint="@string/labelPassword"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/btnLoginClick"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnLogIn" />

        <Button
            android:id="@+id/signUpClick"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnReg" />
    </LinearLayout>

</LinearLayout>