<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logos"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="511dp" />

    <Button
        android:id="@+id/buttonMultiplayer"
        style="@style/ButtonStyleMainMenu"
        android:onClick="startMultiPlayer"
        android:text="@string/igra"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="187dp"
        tools:ignore="MissingConstraints,OnClick" />

    <Button
        style="@style/ButtonStyleMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startSettings"
        android:text="@string/prikaz"
        tools:ignore="MissingConstraints,OnClick"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="90dp" />

    <TextView
        android:id="@+id/textViewTitle1"
        style="@style/BigHeader"
        android:text="@string/slagalica"
        tools:layout_editor_absoluteX="30"
        tools:layout_editor_absoluteY="309dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="277dp"
        tools:layout_editor_absoluteY="19dp" />

    <Button
        android:id="@+id/registracijaBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registracija"
        tools:layout_editor_absoluteX="255dp"
        tools:layout_editor_absoluteY="99dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>