<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrikazKorisnika">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/SmallHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/colorBackground"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/editTextUserName"
                android:background="#FFFFFF"
                android:hint="@string/username"
                android:text=""
                tools:ignore="Autofill,TextFields" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lastname"
                style="@style/SmallHeader"
                android:layout_gravity="start"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextLastName"
                android:textSize="20sp"
                android:background="#FFFFFF"
                android:hint="@string/email"
                android:text=""
                tools:ignore="Autofill,TextFields" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/username"
                style="@style/SmallHeader"
                android:layout_gravity="start"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                >


            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttonIzmeniKorisnika"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Izmeni korisnika" />

        <Button
            android:id="@+id/buttonStatistikaIgraca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Statistika Igraca" />

        <Button
            android:id="@+id/buttonOdjava"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Odjava" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>